# mipstest

./: CMakeLists.txt  README.md  environ.sh  risc_core.xl
include/: config.h  freading.h  main.h  mc_asm.h  syscall-runtime.h
lib/: chdir.c  close.c  fstat.c  gettimeofday.c  isatty.c  link.c  lseek.c  open.c  read.c  sbrk.c  stat.c  syscall-asm.s  times.c  unlink.c  write.c
test/: calls.c  reset.S  simple.c  test1-syscall.c  test2-syscall.c  writer.c
